# yacs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: component.hpp  entity.hpp  pool.h  pool.hpp  pool_iterator.hpp  registry.hpp  types.hpp  version.h  version.hpp
src/: registry.cpp  types.cpp
test/: CMakeLists.txt  component.cpp  data_struct.hpp  main.cpp  pool.cpp  registry.cpp
